# vuln-demo-cpp-windows

./: .gitignore  ARM64Sample.sln  BUILD.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  Makefile  README.md  arm64_sample.sln  arm64_sample.vcxproj  arm64_sample.vcxproj.bak  build.cmd  build.ps1  install_dependencies.sh  main.cpp  veracode.yml  verademo_vulns.cpp  verademo_vulns.h
ARM64Sample/: ARM64Sample.vcxproj  ARM64Sample.vcxproj.filters  main.cpp  math_operations.cpp  math_operations.h
